Use correct label

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "main": "index.tsx",
   "keywords": [],
-  "name": "xnr361zmz",
-  "description": null,
+  "name": "master-fork",
+  "description": "",
   "version": "0.0.265",
   "devDependencies": {
     "react-scripts": "1.0.0"
