--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
-    "azure-devops-ui": "1.151.0",
+    "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.4",
+    "azure-devops-ui": "1.153.0",
     "react": "16.8.1",
     "react-dom": "16.8.1",
-    "react-scripts": "2.0.3"
+    "react-scripts": "3.0.1",
+    "typescript": "^3.5.1"
   },
   "main": "index.tsx",
   "keywords": [],
@@ -11,14 +14,26 @@
   "description": "",
   "version": "0.0.265",
   "devDependencies": {
-    "@types/react": "16.8.19",
-    "@types/react-dom": "16.8.4",
-    "react-scripts": "1.0.0"
+    "@types/react": "^16.8.19",
+    "@types/react-dom": "^16.8.4",
+    "@cschleiden/azure-devops-react-scripts": "^2.1.3-4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
