--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.4",
     "azure-devops-ui": "1.153.0",
+    "base64-inline-loader": "^1.1.1",
     "react": "16.8.1",
     "react-dom": "16.8.1",
-    "react-scripts": "3.0.1",
     "typescript": "^3.5.1"
   },
   "main": "index.tsx",
   "keywords": [],
-  "name": "master-fork",
+  "name": "issue-prototype",
+  "author": "cschleiden",
   "description": "",
   "version": "0.0.265",
   "devDependencies": {
+    "@cschleiden/azure-devops-react-scripts": "^3.0.1-1",
     "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@cschleiden/azure-devops-react-scripts": "^2.1.3-4"
+    "@types/react-dom": "^16.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
