--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/node": "^12.0.4",
     "azure-devops-ui": "1.153.0",
     "base64-inline-loader": "^1.1.1",
+    "gh-pages": "^2.0.1",
     "react": "16.8.1",
     "react-dom": "16.8.1",
     "typescript": "^3.5.1"
@@ -14,12 +15,15 @@
   "author": "cschleiden",
   "description": "",
   "version": "0.0.265",
+  "homepage": "https://cschleiden.github.io/prototype",
   "devDependencies": {
     "@cschleiden/azure-devops-react-scripts": "^3.0.1-1",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
